더보기 완료

--- a/chats.html
+++ b/chats.html
@@ -43,7 +43,7 @@
         <ul class="chats__list">
             <li class="chats__chat">
                 <div class="chat__content">
-                    <img src="images/avatar.jpg">
+                    <img src="images/avatar.jpg" alt="">
                     <div class="chat__preview">
                         <h3 class="chat__user">Ireh</h3>
                         <span class="chat__last-message">Hello! This is a test message.</span>
