채팅 + 뒤로가기 완료

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
             </header>
             <div class="friends__section-rows">
                 <div class="firends__section-row">
-                    <img src="" alt="">
-                    <span class="friends__section-name">IrehJo</span>
+                    <a href="profile.html">
+                        <img src="images/avatar.jpg" alt="">
+                        <span class="friends__section-name">조이레</span>
+                    </a>
                 </div>
                 <div class="firends__section-row">
-                    <img src="" alt="">
+                    <img src="images/avatar.jpg" alt="">
                     <span class="friends__section-name">Friends' Names Display</span>
                 </div>
             </div>
@@ -62,7 +64,7 @@
             <div class="friends__section-rows">
                 <div class="firends__section-row">
                     <div class="friends__secrion-column">
-                        <img src="" alt="">
+                        <img src="images/avatar.jpg" alt="">
                         <span class="friends__section-name">IrehJo</span>
                     </div>
                 </div>
