--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,9 @@
         </div>
         <div class="header__bottom">
             <div class="header__column">
-                <i class="fa fa-times fa-lg"></i>
+                <a href="index.html">
+                    <i class="fa fa-times fa-lg"></i>
+                </a>
             </div>
             <div class="header__column">
                 
@@ -35,5 +37,26 @@
             </div>
         </div>
     </header>
+    <main class="profile">
+        <header class="profile__header">
+            <img src="images/avatar.jpg" alt="">
+            <h3 class="profile__header-title">조이레</h3>
+        </header>
+        <input type="text" placeholder="joireh@nexgens.com">
+        <div class="profile__actions">
+            <div class="profile__action">
+                <span class="profile__action-circle">
+                    <i class="fa fa-comment fa-2x"></i>
+                </span>
+                <span class="profile__action-title">나와의 채팅</span>
+            </div>
+            <div class="profile__action">
+                <span class="profile__action-circle">
+                    <i class="fa fa-pencil fa-2x"></i>
+                </span>
+                <span class="profile__action-title">프로필 관리</span>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
