카카오 클론 CSS작업 완료

--- a/find.html
+++ b/find.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <title>Find</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="top-header">
         <div class="header__top">
             <div class="header__column">
                 <i class="fa fa-plane"></i>
@@ -28,7 +29,7 @@
                 <span class="header__text">Edit</span>
             </div>
             <div class="header__column">
-                <span class="header__text">Find </span>
+                <span class="header__text">찾기 </span>
             </div>
             <div class="header__column">
                 
@@ -46,20 +47,20 @@
                 <span class="find__option-title">QR코드</span>
             </div>
             <div class="find__option">
-                <i class="fa fa-mobile fa-2x"></i>
-                <span class="find__option-title">Shake</span>
+                <i class="fa fa-phone-square fa-lg"></i>
+                <span class="find__option-title">흔들기</span>
             </div>
             <div class="find__option">
                 <i class="fa fa-envelope-o fa-lg"></i>
-                <span class="find__option-title">Invite via SMS</span>
+                <span class="find__option-title">SMS초대</span>
             </div>
         </section>
         <section class="find__recommended">
             <header>
-                <h6 class="recommended__title">Recommended Friends</h6>
+                <h6 class="recommended__title">추천친구</h6>
             </header>
             <div class="recommended__none">
-                <span class="recommended__text">You have no recommended friends.</span>
+                <span class="recommended__text">추천친구가 없습니다.</span>
             </div>
         </section>
     </main>
