--- a/chats.html
+++ b/chats.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <title>Chats</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="top-header">
         <div class="header__top">
             <div class="header__column">
                 <i class="fa fa-plane"></i>
@@ -28,7 +29,7 @@
                 <span class="header__text">Edit</span>
             </div>
             <div class="header__column">
-                <span class="header__text">Chats <i class="fa fa-caret-down"></i></span>
+                <span class="header__text">채팅 <i class="fa fa-caret-down"></i></span>
             </div>
             <div class="header__column">
                 
@@ -46,7 +47,7 @@
                     <div class="chat__content">
                         <img src="images/avatar.jpg" alt="">
                         <div class="chat__preview">
-                            <h3 class="chat__user">Ireh</h3>
+                            <h3 class="chat__user">조이레</h3>
                             <span class="chat__last-message">Hello! This is a test message.</span>
                         </div>
                     </div>
@@ -69,9 +70,79 @@
                     </span>
                 </a>
             </li>
+            <li class="chats__chat">
+                <a href="chat.html">
+                    <div class="chat__content">
+                        <img src="images/avatar.jpg" alt="">
+                        <div class="chat__preview">
+                            <h3 class="chat__user">조이레</h3>
+                            <span class="chat__last-message">Hello! This is a test message.</span>
+                        </div>
+                    </div>
+                    <span class="chat__date-time">
+                        15:55
+                    </span>
+                </a>
+            </li>
+            <li class="chats__chat">
+                <a href="chat.html">
+                    <div class="chat__content">
+                        <img src="images/avatar.jpg" alt="">
+                        <div class="chat__preview">
+                            <h3 class="chat__user">조이레</h3>
+                            <span class="chat__last-message">Hello! This is a test message.</span>
+                        </div>
+                    </div>
+                    <span class="chat__date-time">
+                        15:55
+                    </span>
+                </a>
+            </li>
+            <li class="chats__chat">
+                <a href="chat.html">
+                    <div class="chat__content">
+                        <img src="images/avatar.jpg" alt="">
+                        <div class="chat__preview">
+                            <h3 class="chat__user">조이레</h3>
+                            <span class="chat__last-message">Hello! This is a test message.</span>
+                        </div>
+                    </div>
+                    <span class="chat__date-time">
+                        15:55
+                    </span>
+                </a>
+            </li>
+            <li class="chats__chat">
+                <a href="chat.html">
+                    <div class="chat__content">
+                        <img src="images/avatar.jpg" alt="">
+                        <div class="chat__preview">
+                            <h3 class="chat__user">조이레</h3>
+                            <span class="chat__last-message">Hello! This is a test message.</span>
+                        </div>
+                    </div>
+                    <span class="chat__date-time">
+                        15:55
+                    </span>
+                </a>
+            </li>
+            <li class="chats__chat">
+                <a href="chat.html">
+                    <div class="chat__content">
+                        <img src="images/avatar.jpg" alt="">
+                        <div class="chat__preview">
+                            <h3 class="chat__user">조이레</h3>
+                            <span class="chat__last-message">Hello! This is a test message.</span>
+                        </div>
+                    </div>
+                    <span class="chat__date-time">
+                        15:55
+                    </span>
+                </a>
+            </li>
         </ul>
         <div class="chat-btn">
-            <i class="fa fa-comment"></i>
+            <i class="fa fa-comment"></i>+
         </div>
     </main>
     <nav class="tab-bar">
