--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <title>Friends</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="top-header">
         <div class="header__top">
             <div class="header__column">
                 <i class="fa fa-plane"></i>
@@ -28,7 +29,7 @@
                 <span class="header__text">Manage</span>
             </div>
             <div class="header__column">
-                <span class="header__text">Friends <span class="header__number">1</span>
+                <span class="header__text">친구 <span class="header__number">1</span>
             </div>
             <div class="header__column">
                 <i class="fa fa-cog fa-lg"></i>
@@ -42,16 +43,16 @@
         </div>
         <section class="friends__section">
             <header class="friends__section-header">
-                <h6 class="friends__section-title">My Profile</h6>
+                <h6 class="friends__section-title">내정보</h6>
             </header>
             <div class="friends__section-rows">
-                <div class="firends__section-row">
-                    <a href="profile.html">
-                        <img src="images/avatar.jpg" alt="">
-                        <span class="friends__section-name">조이레</span>
+                <div class="friends__section-row">
+                    <img src="images/avatar.jpg" alt="">
+                    <a href="profile.html" class="friends__section-name">
+                        조이레
                     </a>
                 </div>
-                <div class="firends__section-row">
+                <div class="friends__section-row">
                     <img src="images/avatar.jpg" alt="">
                     <span class="friends__section-name">Friends' Names Display</span>
                 </div>
@@ -59,18 +60,18 @@
         </section>
         <section class="friends__section">
             <header class="friends__section-header">
-                <h6 class="friends__section-title"></h6>
+                <h6 class="friends__section-title">친구</h6>
             </header>
             <div class="friends__section-rows">
-                <div class="firends__section-row">
+                <div class="friends__section-row with-tagline">
                     <div class="friends__secrion-column">
                         <img src="images/avatar.jpg" alt="">
-                        <span class="friends__section-name">IrehJo</span>
+                        <span class="friends__section-name">조이레</span>
                     </div>
+                    <span class="friends__section-tagline">
+                        검은콩 검은참깨
+                    </span>
                 </div>
-                <span class="friends__section-tagline">
-                    Life is short. So live your life.
-                </span>
             </div>
         </section>
     </main>
