--- a/more.html
+++ b/more.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <title>More</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="top-header">
         <div class="header__top">
             <div class="header__column">
                 <i class="fa fa-plane"></i>
@@ -28,7 +29,7 @@
                 
             </div>
             <div class="header__column">
-                <span class="header__text">More </span>
+                <span class="header__text">더보기</span>
             </div>
             <div class="header__column">
                 <i class="fa fa-cog fa-lg"></i>
@@ -41,7 +42,7 @@
                 <img src="images/avatar.jpg" alt="">
                 <div class="more-header__info">
                     <h3 class="more-header__title">
-                        IrehJo
+                        조이레
                     </h3>
                     <span class="more-header__subtitle">
                         joireh@nexgens.com
@@ -53,20 +54,20 @@
         <section class="more__options">
             <div class="more__option">
                 <i class="fa fa-smile-o fa-2x"></i>
-                <span class="more__option-title">Emoticons</span></div>
+                <span class="more__option-title">이모티콘</span></div>
             <div class="more__option">
                 <i class="fa fa-paint-brush fa-2x"></i>
-                <span class="more__option-title">Themes</span></div>
+                <span class="more__option-title">테마</span></div>
             <div class="more__option">
                 <i class="fa fa-hand-peace-o fa-2x"></i>
-                <span class="more__option-title">Plus Friend</span></div>
+                <span class="more__option-title">플러스 친구</span></div>
             <div class="more__option">
                 <i class="fa fa-user fa-2x"></i>
-                <span class="more__option-title">Account</span></div>
+                <span class="more__option-title">계정</span></div>
         </section>
         <section class="more__plus-friends">
             <header class="plus-friends__header">
-                <h2 class="plus-friends__title">Plus Friends</h2>
+                <h2 class="plus-friends__title">플러스 친구</h2>
                 <span class="plus-friends__learn-more">
                     <i class="fa fa-info-circle"></i>
                     Learn More
@@ -75,39 +76,39 @@
             <div class="plus-friends__items">
                 <div class="plus-friends__item">
                     <i class="fa fa-cutlery"></i>
-                    <span class="plus-friends__item-title">Order</span>
+                    <span class="plus-friends__item-title">주문</span>
                 </div>
                 <div class="plus-friends__item">
                     <i class="fa fa-home"></i>
-                    <span class="plus-friends__item-title">Store</span>
+                    <span class="plus-friends__item-title">스토어</span>
                 </div>
                 <div class="plus-friends__item">
                     <i class="fa fa-tv"></i>
-                    <span class="plus-friends__item-title">TV Channel/Radio</span>
+                    <span class="plus-friends__item-title">TV채널/라디오</span>
                 </div>
                 <div class="plus-friends__item">
                     <i class="fa fa-pencil"></i>
-                    <span class="plus-friends__item-title">Creation</span>
+                    <span class="plus-friends__item-title">만들기</span>
                 </div>
                 <div class="plus-friends__item">
                     <i class="fa fa-graduation-cap"></i>
-                    <span class="plus-friends__item-title">Education</span>
+                    <span class="plus-friends__item-title">교육</span>
                 </div>
                 <div class="plus-friends__item">
                     <i class="fa fa-university"></i>
-                    <span class="plus-friends__item-title">Politics/Society</span>
+                    <span class="plus-friends__item-title">정치/사회</span>
                 </div>
                 <div class="plus-friends__item">
                     <i class="fa fa-krw"></i>
-                    <span class="plus-friends__item-title">Finance</span>
+                    <span class="plus-friends__item-title">금융</span>
                 </div>
                 <div class="plus-friends__item">
                     <i class="fa fa-video-camera"></i>
-                    <span class="plus-friends__item-title">Movies/Music</span>
+                    <span class="plus-friends__item-title">영화/음악</span>
                 </div>
             </div>
         </section>
-        <section class="more__options">
+        <section class="more__links">
             <div class="more__option">
                 <img src="images/KakaoStory.png" alt="" class="more__options-image">
                 <span class="more__options-title">Kakao Story</span>
