--- a/profile.html
+++ b/profile.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <title>profile</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="top-header top-header--transparent">
         <div class="header__top">
             <div class="header__column">
                 <i class="fa fa-plane"></i>
@@ -39,22 +40,26 @@
     </header>
     <main class="profile">
         <header class="profile__header">
-            <img src="images/avatar.jpg" alt="">
-            <h3 class="profile__header-title">조이레</h3>
-        </header>
-        <input type="text" placeholder="joireh@nexgens.com">
-        <div class="profile__actions">
-            <div class="profile__action">
-                <span class="profile__action-circle">
-                    <i class="fa fa-comment fa-2x"></i>
-                </span>
-                <span class="profile__action-title">나와의 채팅</span>
+            <div class="profile__header-container">
+                <img src="images/avatar.jpg" alt="">
+                <h3 class="profile__header-title">조이레</h3>
             </div>
-            <div class="profile__action">
-                <span class="profile__action-circle">
-                    <i class="fa fa-pencil fa-2x"></i>
-                </span>
-                <span class="profile__action-title">프로필 관리</span>
+        </header>
+        <div class="profile__container">
+            <input type="text" placeholder="joireh@nexgens.com">
+            <div class="profile__actions">
+                <div class="profile__action">
+                    <span class="profile__action-circle">
+                        <i class="fa fa-comment fa-2x"></i>
+                    </span>
+                    <span class="profile__action-title">나와의 채팅</span>
+                </div>
+                <div class="profile__action">
+                    <span class="profile__action-circle">
+                        <i class="fa fa-pencil fa-2x"></i>
+                    </span>
+                    <span class="profile__action-title">프로필 관리</span>
+                </div>
             </div>
         </div>
     </main>
