--- a/find.html
+++ b/find.html
@@ -82,5 +82,8 @@
             <span class="tab-bar__title">더보기</span>
         </a>
     </nav>
+    <div class="bigScreenText">
+        <span>Please make your screen smaller</span>
+    </div>
 </body>
 </html>
