이미지 경로 소문자로 변경

--- a/more.html
+++ b/more.html
@@ -110,7 +110,7 @@
         </section>
         <section class="more__links">
             <div class="more__option">
-                <img src="images/KakaoStory.png" alt="" class="more__options-image">
+                <img src="images/kakaoStory.png" alt="" class="more__options-image">
                 <span class="more__options-title">Kakao Story</span>
             </div>
             <div class="more__option">
@@ -118,7 +118,7 @@
                 <span class="more__options-title">Path</span>
             </div>
             <div class="more__option">
-                <img src="images/KakaoFriends.png" alt="" class="more__options-image">
+                <img src="images/kakaoFriends.png" alt="" class="more__options-image">
                 <span class="more__options-title">Kakao friends</span>
             </div>
         </section>
